header style/image added

--- a/app/assets/styles/base/_variables.css
+++ b/app/assets/styles/base/_variables.css
@@ -1,2 +1,12 @@
-$mainBlue: #2f5572;
-$mainOrange:#d59541;
+/*sharp and modern */
+
+$electricGreen : #3cc47c;
+$ForestGreen : #1E392A;
+$lightYellow : #e9c893;
+$tinGrey : #828081;
+
+/* warm tones */
+$grain : #d7cec7;
+$blackboard: #565656;
+$oxblood: #76323f;
+$tan : #c09f80;
