--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -1,5 +1,5 @@
 body {
-    font-family:'Roboto', sans-serif;
+    background-color:#f9f9f9;
     color: #333;
   }
   
@@ -12,5 +12,33 @@ body {
   }
   
   a {
-    color: $mainOrange;
+    color: $tan;
+    -o-transition:5s;
+    -ms-transition:5s;
+    -moz-transition:5s;
+    -webkit-transition:5s;
+    transition:5s;
+    text-decoration:none;
   }
+
+  /* em {
+    font-style:oblique;
+  } */
+
+  strong {
+    font-style:bold;
+ }
+
+ h1,h2,h3,h4,h5 {
+  font-family:'Roboto', sans-serif;
+  /* font-family: 'proxima-nova', sans-serif; */
+  font-style:normal;
+ }
+
+ h3 {
+   text-transform: capitalize;
+   font-size: 1.875rem;
+   padding: 0 0 1% 0;
+   color: #001833;
+   /* font-weight: 800; */
+ }
