--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -2,4 +2,6 @@
 @import "base/_variables";
 @import "base/_mixins";
 @import "base/_global";
-@import "modules/_test";
+@import "modules/_site-header";
+@import "modules/_wrapper";
+@import "modules/_about";
