--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -1,6 +1,6 @@
 body {
     background-color:#f9f9f9;
-    color: #333;
+    color: $blackboard;
   }
   
   img {
@@ -8,22 +8,22 @@ body {
     height: auto;
   }
   * {
-      box-sizing: border-box;
+      /* box-sizing: border-box; */
   }
   
   a {
     color: $tan;
-    -o-transition:5s;
-    -ms-transition:5s;
-    -moz-transition:5s;
-    -webkit-transition:5s;
-    transition:5s;
+    -o-transition:.5s;
+    -ms-transition:.5s;
+    -moz-transition:.5s;
+    -webkit-transition:.5s;
+    transition:.5s;
     text-decoration:none;
   }
 
-  /* em {
+  em {
     font-style:oblique;
-  } */
+  }
 
   strong {
     font-style:bold;
@@ -36,9 +36,9 @@ body {
  }
 
  h3 {
-   text-transform: capitalize;
-   font-size: 1.875rem;
+   text-transform: uppercase;
+   font-size: 1.4rem;
    padding: 0 0 1% 0;
-   color: #001833;
+   color: $oxblood;
    /* font-weight: 800; */
  }
