--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -4,11 +4,12 @@
     font-family: 'Roboto', sans-serif;
     margin: 0 auto;
 
-    @mixin atSmall {
+
+    @mixin atMedium {
         max-width: 700px;
     }
 
-    @mixin atMedium {
+    @mixin atLarge {
         max-width: 960px;
     }
 }
