--- a/app/assets/styles/modules/_work.css
+++ b/app/assets/styles/modules/_work.css
@@ -2,25 +2,17 @@
     height: 300px;
     padding: 2% 0;
 
-    
-
     &__image-area {
         float:left;
         width:100%;
         height:auto;
 
-        
-       /* @mixin atSmall {
-            width:450px;
-    }
- 
-         */
 
  
         @mixin atMedium {
             width:350px;
             height:300px;
-            /* overflow:hidden; */
+            overflow:hidden;
 
             &--left{
                 float:left;
