--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -18,12 +18,12 @@
     }
 
     &--intro h1 {
-        font-size: 3em;
+        font-size: 2rem;
         font-weight: 100;
         text-align:center;
         color: #fff;
         text-transform: uppercase;
-        letter-spacing: 0.1em;
+        /* letter-spacing: 0.1em; */
         line-height: 1.5em;
         margin-bottom: 0;
         
