--- a/app/assets/styles/modules/_button.css
+++ b/app/assets/styles/modules/_button.css
@@ -1,10 +1,10 @@
 .button {
     padding: 5% 3%;
     /* border-radius: 3em; */
-    border: 3px solid $tan;
+    border: 3px solid $blackboard;
     letter-spacing: 0.2em;
     text-decoration:none;
-    color: $tan;
+    color: $blackboard;
     text-align: center;
     display: block;
     font-weight:600;
@@ -13,8 +13,21 @@
 
     &--hover:hover {
         color:#fff;
-        background-color:$tan;
+        background-color:$blackboard;
+        /* transform: scaleX(1.1); */
+    }
+
+    &--small {
+            margin:0 auto;
+            height:18.4px;
+            width: 270.362px;
+            padding:17.7px 8.819px;       
+
+    }
+    
+    &--white {
+        background-color:$grain;
     }
 
 
-    }
+}
