--- a/app/assets/styles/modules/_contact.css
+++ b/app/assets/styles/modules/_contact.css
@@ -1,28 +1,32 @@
 .contact {
     width:100%;
+    color:white;
+
+    /* font-weight:100; */
     background-color:$tan;
     padding:5% 0;
     margin-top: 5%;
     clear:both;
 
     &__content {
-        max-width:960px;
-        margin: 0 auto;
+        /* max-width:960px; */
+        /* margin: 0 auto; */
         text-align: center;
     }
 
-    &__content h4 {
+   
+    &__content h3 {
         font-size:1.875em;
         padding: 1% 0;
         color: #fff;
-        font-weight:600;
+        font-weight:400;
         letter-spacing: 0.04em;
+        margin-bottom: 0;
     }
 
-    &__content a {
-        color: $grain;
-        text-decoration:none;
-        
+    &__content p {
+        font-weight: 100;
     }
+
 
 }
