--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -11,4 +11,4 @@
 @import "modules/_contact";
 @import "modules/_image-divider";
 @import "modules/_site-footer";
-@import "modules/_list-inline";
+/* @import "modules/_list-inline"; */
