webpack.config.js added. this as the problem

--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -22,7 +22,7 @@
         font-weight: 100;
         text-align:center;
         color: #fff;
-        text-transform: uppercase;
+        /* text-transform: uppercase; */
         /* letter-spacing: 0.1em; */
         line-height: 1.5em;
         margin-bottom: 0;
