--- a/app/assets/styles/modules/_about.css
+++ b/app/assets/styles/modules/_about.css
@@ -1,8 +1,9 @@
 .about {
     padding: 4% 0;
-    /* text-align: center; */
+    
 
     &__content p {
+        text-align: left;
         font-style:normal;
         font-size:1.2em;
         line-height:1.4;
