--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -12,3 +12,4 @@
 @import "modules/_image-divider";
 @import "modules/_site-footer";
 /* @import "modules/_list-inline"; */
+@import "modules/_reveal-item";
