--- a/app/assets/styles/modules/_about.css
+++ b/app/assets/styles/modules/_about.css
@@ -10,7 +10,7 @@
         font-weight:300;
         /* color: $blackboard; */
         letter-spacing: .03em;
-        margin:10px auto;
+        margin:4% auto;
         padding: 2% 0;
         
         
