--- a/app/assets/styles/modules/_text-box.css
+++ b/app/assets/styles/modules/_text-box.css
@@ -24,13 +24,13 @@
 
     @mixin atMedium {
         height:100%;
-        width:350px;
+        width:50%;
    
     }
     
     @mixin atLarge {
         height:100%;
-        width:480px;
+        width:50%;
     }
 
 
