--- a/app/assets/styles/modules/_work.css
+++ b/app/assets/styles/modules/_work.css
@@ -6,11 +6,11 @@
         float:left;
         width:100%;
         height:auto;
-
+ 
 
  
         @mixin atMedium {
-            width:350px;
+            width:50%;
             height:300px;
             overflow:hidden;
 
@@ -26,7 +26,7 @@
         
         @mixin atLarge {
             
-            width:480px;
+            width:50%;
             height:300px;
             overflow: hidden;
             
