started skill bar

--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -13,3 +13,4 @@
 @import "modules/_site-footer";
 /* @import "modules/_list-inline"; */
 @import "modules/_reveal-item";
+@import "modules/_skills";
