--- a/app/assets/styles/modules/_button.css
+++ b/app/assets/styles/modules/_button.css
@@ -1,10 +1,10 @@
 .button {
     padding: 5% 3%;
     /* border-radius: 3em; */
-    border: 3px solid $blackboard;
+    border: 3px solid $grain;
     letter-spacing: 0.2em;
     text-decoration:none;
-    color: $blackboard;
+    color: $grain;
     text-align: center;
     display: block;
     font-weight:600;
@@ -13,7 +13,7 @@
 
     &--hover:hover {
         color:#fff;
-        background-color:$blackboard;
+        background-color:$grain;
         /* transform: scaleX(1.1); */
     }
 
@@ -26,7 +26,12 @@
     }
     
     &--white {
+        border-color:$blackboard;
         background-color:$grain;
+        color:$blackboard;
+    }
+    &--white:hover {
+        background-color:$blackboard;
     }
 
 
