--- a/app/assets/styles/modules/_text-box.css
+++ b/app/assets/styles/modules/_text-box.css
@@ -17,6 +17,15 @@
         font-size: 1em;
     }
 
+    &__content h3 {
+        margin-bottom: 0;
+    }
+
+    &__content h4 {
+        margin-top:3px;
+        text-transform: capitalize;
+    }
+
     @mixin atSmall {
         margin-bottom:0;
     }
