--- a/app/assets/styles/modules/_text-box.css
+++ b/app/assets/styles/modules/_text-box.css
@@ -5,6 +5,14 @@
     height:auto;
     background-color:#fff;
     margin-bottom:40px;
+
+    &--icon {
+        color:$blackboard;
+    }
+    &--icon:hover {
+        transition: ease-out .2s;
+        color:$tan;
+    }
     
     &__content {
         padding: 4% 8%;
@@ -27,19 +35,23 @@
     }
 
     @mixin atSmall {
+        
         margin-bottom:0;
     }
- 
-
+    
+    
     @mixin atMedium {
+        
         height:100%;
         width:50%;
+        font-size: .8em;
    
     }
     
     @mixin atLarge {
-        height:100%;
+        /* height:100%; */
         width:50%;
+        font-size: 1em;
     }
 
 
