--- a/app/assets/styles/modules/_work.css
+++ b/app/assets/styles/modules/_work.css
@@ -1,25 +1,34 @@
 .work {
     
     height: 350px;
-    padding: 2% 0;
+    padding: 4% 0;
 
     @mixin atSmall {
-        height: 390px;
+        height: 310px;
 
+    }
+
+    @mixin atMedium {
+        /* height: 350px; */
+    }
+    @mixin atLarge {
+        height: 350px;
     }
 
 
     &__image-area {
         float:left;
         width:100%;
-        height:auto;
+        height:auto%;
 
        
-
+        @mixin atSmall {
+            height:100%;
+        }
  
         @mixin atMedium {
+            /* height:100%; */
             width:50%;
-            height:350px;
             overflow:hidden;
 
             &--left{
@@ -35,7 +44,7 @@
         @mixin atLarge {
             
             width:50%;
-            height:300px;
+            /* height:100%; */
             overflow: hidden;
             
           
