--- a/app/assets/styles/modules/_about.css
+++ b/app/assets/styles/modules/_about.css
@@ -1,21 +1,25 @@
 .about {
-    padding: 4% 0;
+    padding: 8% 0;
+
+    &__content {
+        padding-bottom:4%;
+    }
     
 
     &__content p{
         text-align: left;
         font-style:normal;
-        font-size:1.2em;
+        font-size: 9px;
         line-height:1.4;
         font-weight:300;
         /* color: $blackboard; */
         letter-spacing: .03em;
         margin:4% auto;
         padding-top: 1%;
-        
+         
         
         @mixin atSmall {
-            font-size:1.2em;
+            font-size:.9em;
             line-height: 1.5;
         }
 
