--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -13,5 +13,5 @@
 @import "modules/_site-footer";
 /* @import "modules/_list-inline"; */
 @import "modules/_reveal-item";
-@import "modules/_skills";
+/* @import "modules/_skills"; */
 @import "modules/_modal";
