--- a/app/assets/styles/modules/_about.css
+++ b/app/assets/styles/modules/_about.css
@@ -4,7 +4,10 @@
     &__content {
         padding-bottom:4%;
     }
-    
+
+    &__title {
+        color:$grain;
+    }
 
     &__content p{
         text-align: left;
