--- a/app/assets/styles/modules/_button.css
+++ b/app/assets/styles/modules/_button.css
@@ -35,7 +35,18 @@
     }
 
     &--hire {
-        font-size: .75em;
+        font-size: .5em;
+        margin:0 auto;
+
+        @mixin atSmall {
+            font-size:.75em;
+            margin:0 auto;
+            height:18.4px;
+            width: 270.362px;
+            padding:17.7px 8.819px;   
+        }
+       
+
     }
 
 
