--- a/app/assets/styles/modules/_contact.css
+++ b/app/assets/styles/modules/_contact.css
@@ -4,10 +4,11 @@
 
     /* font-weight:100; */
     background-color:$grain;
-    padding:5% 0;
+    padding:20% 0;
     margin-top: 5%;
     clear:both;
 
+    
     &__content {
         /* max-width:960px; */
         /* margin: 0 auto; */
@@ -16,14 +17,25 @@
 
    
     &__content h3 {
-        font-size:1.875em;
+        font-size:1.2em;
         padding: 1% 0;
         color: #fff;
-        font-weight:400;
+        font-weight:800;
         letter-spacing: 0.04em;
         margin-bottom: 0;
     }
+    
+    @mixin atMedium {
+        padding:5% 0;
 
+        &__content h3{
+            font-size:1.7em;
+        }
+
+    }
+    
+
+ 
     &__content p {
         font-weight: 100;
     }
