--- a/app/assets/styles/modules/_about.css
+++ b/app/assets/styles/modules/_about.css
@@ -1,15 +1,15 @@
 .about {
     padding: 8% 0;
 
-    &__content {
+    &__container {
         padding-bottom:4%;
     }
 
     &__title {
-        color:$grain;
+        color:#fff;
     }
 
-    &__content p{
+    &__container p{
         text-align: left;
         font-style:normal;
         font-size: 9px;
@@ -17,28 +17,22 @@
         font-weight:300;
         /* color: $blackboard; */
         letter-spacing: .03em;
-        margin:4% auto;
+        margin-top:3%;
+        margin-bottom:0;
         padding-top: 1%;
          
         
         @mixin atSmall {
             font-size:.9em;
-            line-height: 1.5;
+            line-height: 1.7;
         }
 
     }
 
-
-
-
-    &__skills {
-
+    &__content {
+        padding-top: 20px;
     }
-
-    &__resume {
-
-        
-    }
+ 
 
 
 }
