--- a/app/assets/styles/modules/_contact.css
+++ b/app/assets/styles/modules/_contact.css
@@ -3,7 +3,7 @@
     color:white;
 
     /* font-weight:100; */
-    background-color:$grain;
+    background-color:$fontcolor;
     padding:20% 0;
     margin-top: 5%;
     clear:both;
