--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -3,7 +3,8 @@
     background-color: $blackboard;
     padding: 60px;
 
-    @mixin atMedium {
+
+    @mixin atSmall {
         background:
         linear-gradient(
             rgba($blackboard,1.0),
@@ -27,7 +28,11 @@
     &--intro {
         max-width:960px;
         margin:0 auto;
-        padding: 12% 0;
+        padding: 40% 0;
+
+        @mixin atMedium {
+            padding:12% 0;
+        }
     }
 
     &--intro h1 {
