--- a/app/assets/styles/modules/_text-box.css
+++ b/app/assets/styles/modules/_text-box.css
@@ -23,16 +23,26 @@
         /* color: $blackboard; */
         letter-spacing:.03em;
         font-size: .8em;
+
+        @mixin atMedium {
+            font-size:.9em;
+        }
+
+        @mixin atLarge {
+            font-size:.8em;
+        }
     }
 
     &__content h3 {
         margin-bottom: 0;
+        font-size:.9em;
     }
 
     &__content h4 {
         margin-top:3px;
         margin-bottom: 0;
         text-transform: capitalize;
+        font-size:1em;
     }
 
     @mixin atSmall {
